<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:text="@string/title"
        android:textStyle="bold"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<ImageView
    android:id="@+id/imagem_sorteio"
    android:layout_width="140dp"
    android:layout_height="140dp"
    android:layout_marginTop="32dp"
    android:src="@drawable/padrao"
    android:layout_gravity="center"/>

    <TextView
        android:id="@+id/tilte_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/informatioUser"
        android:textStyle="bold"
        android:textSize="@dimen/word"
        android:layout_gravity="center"
        tools:ignore="SpUsage" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="32dp">

    <ImageView
        android:id="@+id/imagem_pedra"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/pedra"/>

    <ImageView
        android:id="@+id/imagem_papel"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:src="@drawable/papel"/>

    <ImageView
        android:id="@+id/imagem_tesoura"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/tesoura"/>
    </LinearLayout>


    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="@string/score"
        android:visibility="invisible"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/machine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/machine"
            android:textSize="18dp"
            android:textStyle="bold"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/machine_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score_machine"
            android:textStyle="bold"
            android:textSize="18dp"
            android:visibility="invisible"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/user"
            android:textSize="18dp"
            android:textStyle="bold"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/user_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score_user"
            android:textSize="18dp"
            android:textStyle="bold"
            android:visibility="invisible" />

    </LinearLayout>

    <Button
        android:id="@+id/bntReset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/name_bnt_Reset"
        android:textColor="#FFF"
        android:textStyle="bold"
        android:background="@color/colorAccent"/>


</LinearLayout>